Add support for and implement multiple tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,21 @@ add_library(${SOURCE_NAME} "${SOURCES_LIB}")
 
 enable_testing()
 
-add_executable(vector_test ${PATH_TEST}/vector_test.c)
-target_link_libraries(vector_test ${SOURCE_NAME})
-add_test(vector vector_test)
+set(tests
+  "vector_test"
+  "concat_test"
+  )
+
+list(LENGTH tests temp_len)
+math(EXPR test_len "${temp_len} - 1")
+
+foreach(index RANGE ${test_len})
+  list(GET tests ${index} test)
+  add_executable(${test} ${PATH_TEST}/${test}.c)
+  target_link_libraries(${test} ${SOURCE_NAME})
+  add_test(${test} ${test})
+endforeach()
+
 
 add_executable(${PROJECT_NAME} ${PATH_SOURCE}/main.c)
 target_link_libraries(${PROJECT_NAME} ${SOURCE_NAME} readline)
